# tabular.eval.utility_metrics

./: CITATION.cff  LICENSE  README.md  pyproject.toml
example/datasets/: synthetic_dataset_2.csv
scripts/: example_script.py
scripts/datasets/: original_dataset.csv  synthetic_dataset_1.csv
src/tno/sdg/tabular/eval/utility_metrics/: __init__.py  bivariate_correlations.py  bivariate_distributions.py  distinguishability.py  multivariate_predictions_acc.py  multivariate_predictions_acc_regr.py  spiderplot.py  univariate_distributions.py
src/tno/sdg/tabular/eval/utility_metrics/test/: __init__.py  test_bivariate_correlations.py  test_distinguishability.py  test_multivariate_predictions_acc.py  test_multivariate_predictions_acc_regr.py  test_spiderplot.py  test_univariate_distributions.py  utils.py
stubs/matplotlib/: __init__.pyi  lines.pyi  pyplot.pyi
stubs/plotly/: __init__.pyi  basedatatypes.pyi
stubs/plotly/graph_objects/: __init__.pyi  _figure.pyi  _scatterpolar.pyi
stubs/scipy/: __init__.pyi  stats.pyi
stubs/seaborn/: __init__.pyi  distributions.pyi  matrix.pyi
stubs/sklearn/: metrics.pyi  model_selection.pyi
stubs/sklearn/dummy/: __init__.pyi  dummy.pyi
stubs/sklearn/linear_model/: __init__.pyi  _logistic.pyi
stubs/sklearn/pipeline/: pipeline.pyi
stubs/sklearn/preprocessing/: __init__.pyi  _data.pyi  _discretization.pyi
stubs/sklearn/svm/: __init__.pyi  _classes.pyi
stubs/statsmodels/: api.pyi
